--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Daniel Test</title>
     <link rel="stylesheet" href="temp-style.css">
     <link rel="stylesheet" href="materialize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="fontawesome.css">
     <link rel="stylesheet" href="style2.css">    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">    
 </head>
@@ -75,16 +75,35 @@
     <h5 class="grey-text center-align" id="recent-projects">Recent projects . ..</h5>
     <div class="row container">
         <div class="col s12 m6 l6">
-            <a href="#"><img src="images/card.jpg" class="responsive-img projects" alt=""></a>
+            <div class="project-indiv-container">
+                <img src="images/card.jpg" class="responsive-img projects" alt="">
+                <div class="img-cover">
+                    <h5 class="white-text center">Card Flipping Effect</h5>
+                </div>                
+            </div>
         </div>
         <div class="col s12 m6 l6">
-            <a href="#"><img src="images/filter.png" class="responsive-img projects" alt=""></a>
+            <div class="project-indiv-container">
+                <img src="images/filter.png" class="responsive-img projects" alt="">
+                <div class="img-cover">
+                    <h5 class="white-text center">Demo Contact Filter</h5>
+                </div>                
+            </div>
         </div>
         <div class="col s12 m6 l6">
-            <a href="#"><img src="images/office.jpg" class="responsive-img projects" alt=""></a>
-        </div>
+            <div class="project-indiv-container">
+                <img src="images/office.jpg" class="responsive-img projects" alt="">
+                <div class="img-cover">
+                    <h5 class="white-text center">Dummy Quiz WebApp</h5>
+                </div>                
+            </div>        </div>
         <div class="col s12 m6 l6">
-            <a href="#"><img src="images/filter.png" class="responsive-img projects" alt=""></a>
+            <div class="project-indiv-container">
+                <img src="images/filter.png" class="responsive-img projects" alt="">
+                <div class="img-cover">
+                    <h5 class="white-text center">My Portfolio</h5>
+                </div>                
+            </div>
         </div>
         <p class="right-align "><a href="#"><i class="material-icons">trending_flat</i>See more on Github </a></p>
     </div>
