--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Daniel Don | My Portfolio</title>
+    <title>Daniel Test</title>
     <link rel="stylesheet" href="temp-style.css">
     <link rel="stylesheet" href="materialize.min.css">
     <link rel="stylesheet" href="fontawesome.css">
@@ -21,7 +21,7 @@
                 </a>
                 <ul class=""id="shift">
                     <li><a href="#blog-excerpts" id="nav-blog" title="BLOG EXCERPTS"><i class="material-icons green-text">content_paste</i></a></li>
-                    <li><a href="#form-container" id="nav-mail" title="SEND A MAIL"><i class="material-icons green-text">mail_outline</i></a></li>
+                    <li><a href="#next-to-social-media" id="nav-social-media" title="SOCIAL MEDIA HANDLES"><i class="material-icons green-text">thumb_up</i></a></li>
                     <li><a href="#about-me-content" id="nav-about-me" title="ABOUT ME"><i class="material-icons green-text">border_color</i></a></li>
                     <li> <a href="#recent-projects" id="nav-projects" title="RECENT PROJECTS"><i class="material-icons green-text">developer_mode</i></a></li>
                     <li></li>
@@ -79,6 +79,7 @@
                 <img src="images/card.jpg" class="responsive-img projects" alt="">
                 <div class="img-cover">
                     <h5 class="white-text center">Card Flipping Effect</h5>
+                    <p class="view-on-github-center"><a href="#">VIEW ON GITHUB</a></p>
                 </div>                
             </div>
         </div>
@@ -87,6 +88,7 @@
                 <img src="images/filter.png" class="responsive-img projects" alt="">
                 <div class="img-cover">
                     <h5 class="white-text center">Demo Contact Filter</h5>
+                    <p class="view-on-github-center"><a href="#">VIEW ON GITHUB</a></p>
                 </div>                
             </div>
         </div>
@@ -95,20 +97,22 @@
                 <img src="images/office.jpg" class="responsive-img projects" alt="">
                 <div class="img-cover">
                     <h5 class="white-text center">Dummy Quiz WebApp</h5>
+                    <p class="view-on-github-center"><a href="#">VIEW ON GITHUB</a></p>
                 </div>                
             </div>        </div>
-        <div class="col s12 m6 l6">
+        <div class="col s12 m6 l6" id="my-port-on-github">
             <div class="project-indiv-container">
-                <img src="images/filter.png" class="responsive-img projects" alt="">
+                <img src="images/web.png" class="responsive-img projects" alt="">
                 <div class="img-cover">
                     <h5 class="white-text center">My Portfolio</h5>
+                    <p class="view-on-github-center"><a href="#">VIEW ON GITHUB</a></p>
                 </div>                
             </div>
         </div>
         <p class="right-align "><a href="#"><i class="material-icons">trending_flat</i>See more on Github </a></p>
     </div>
-    
-    <div class="container center" style="font-size:60px;" >
+    <p id="next-to-social-media" class="card-panel"></p>
+    <div class="container center" style="font-size:60px;" id="social-media-handles">
         <a href="" id="facebook-icon" class="fa-facebook-square grey-text"></a>
         <a href="" id="twitter-icon" class="fa-twitter-square grey-text"></a>
         <a href="" id="slack-icon" class="fa-slack grey-text"></a>
