--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <img src="images/card.jpg" class="responsive-img projects" alt="">
                 <div class="img-cover">
                     <h5 class="white-text center">Card Flipping Effect</h5>
-                    <p class="view-on-github-center"><a href="#">VIEW ON GITHUB</a></p>
+                    <p class="view-on-github-center"><a href="https://github.com/Chiagozielam/3d-card-effects" target="_blank">VIEW ON GITHUB</a></p>
                 </div>                
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <img src="images/filter.png" class="responsive-img projects" alt="">
                 <div class="img-cover">
                     <h5 class="white-text center">Demo Contact Filter</h5>
-                    <p class="view-on-github-center"><a href="#">VIEW ON GITHUB</a></p>
+                    <p class="view-on-github-center"><a href="https://github.com/Chiagozielam/dummy-contact-filter" target="_blank">VIEW ON GITHUB</a></p>
                 </div>                
             </div>
         </div>
@@ -105,15 +105,15 @@
                 <img src="images/web.png" class="responsive-img projects" alt="">
                 <div class="img-cover">
                     <h5 class="white-text center">My Portfolio</h5>
-                    <p class="view-on-github-center"><a href="#">VIEW ON GITHUB</a></p>
+                    <p class="view-on-github-center"><a href="https://github.com/Chiagozielam/Chiagozielam.github.io" target="_blank">VIEW ON GITHUB</a></p>
                 </div>                
             </div>
         </div>
-        <p class="right-align "><a href="#"><i class="material-icons">trending_flat</i>See more on Github </a></p>
+        <p class="right-align "><a href="https://github.com/Chiagozielam" target="_blank"><i class="material-icons">trending_flat</i>See more on Github </a></p>
     </div>
     <p id="next-to-social-media" class="card-panel"></p>
     <div class="container center" style="font-size:60px;" id="social-media-handles">
-        <a href="" id="facebook-icon" class="fa-facebook-square grey-text"></a>
+        <a href="https://www.facebook.com/daniel.don.102361" target="_blank" id="facebook-icon" class="fa-facebook-square grey-text"></a>
         <a href="" id="twitter-icon" class="fa-twitter-square grey-text"></a>
         <a href="" id="slack-icon" class="fa-slack grey-text"></a>
         <a href="" id="github-icon" class="fa-github-square grey-text"></a>        
