--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
                 <img src="images/ipad.jpg" alt="" class="responsive-img mobile-img"  >
                 <ul class="tab-keys">
                     <li>
-                        <h6><a href="#about-me-box" class="" id="about-me-link"><i class="material-icons grey-text">apps</i> ABOUT ME</a></h6>
+                        <h6><a href="#about-me-box" class="" id="about-me-link"><i class="material-icons grey-text tabIcons">apps</i> ABOUT ME</a></h6>
                     </li>
                     <li>
-                        <h6><a href="#job-description-content" class="" id="job-description-link"><i class="material-icons grey-text">navigation</i>JOB DESCRIPTION</a></h6>
+                        <h6><a href="#job-description-content" class="" id="job-description-link"><i class="material-icons grey-text tabIcons">navigation</i>JOB DESCRIPTION</a></h6>
                     </li>
                     <li>
-                        <h6><a href="#pricing-content" id="pricing-link"><i class="material-icons grey-text">show_chart</i>PRICING</a></h6>
+                        <h6><a href="#pricing-content" id="pricing-link"><i class="material-icons grey-text tabIcons">show_chart</i>PRICING</a></h6>
                     </li>
                     <li>
-                        <h6><a href="#contact-content" id="contact-link"><i class="material-icons grey-text">sort</i>CONTACT</a></h6>
+                        <h6><a href="#contact-content" id="contact-link"><i class="material-icons grey-text tabIcons">sort</i>CONTACT</a></h6>
                     </li>
                     <li>
-                        <h6><a href="blog.html"><i class="material-icons grey-text">desktop_mac</i>BLOG</a></h6>
+                        <h6><a href="blog.html"><i class="material-icons grey-text tabIcons">desktop_mac</i>BLOG</a></h6>
                     </li>
                 </ul>
             </div>
