--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Daniel Test</title>
-    <link rel="shortcut icon" href="font-awesome.min.css" type="text/css">
+    <link rel="shortcut icon" href="font-awesome.min.css">
     <link rel="stylesheet" href="temp-style.css">
     <link rel="stylesheet" href="materialize.min.css">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style2.css">    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">    
 </head>
@@ -393,6 +392,7 @@
     <script src="typed.js"></script>    
     <script src="main-jq.js"></script>    
     <script src="materialize.min.js"></script>
+    <script src="font-awesome.js"></script>
     <script src="init.js"></script>
 </body>
 </html>
