--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Daniel Test</title>
-    <link rel="shortcut icon" href="font-awesome.min.css">
+    <link rel="shortcut icon" href="fontawesome.css">
     <link rel="stylesheet" href="temp-style.css">
     <link rel="stylesheet" href="materialize.min.css">
     <link rel="stylesheet" href="style2.css">    
@@ -392,7 +392,7 @@
     <script src="typed.js"></script>    
     <script src="main-jq.js"></script>    
     <script src="materialize.min.js"></script>
-    <script src="font-awesome.js"></script>
+    <script src="fontawesome.js"></script>
     <script src="init.js"></script>
 </body>
 </html>
