--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="temp-style.css">
     <link rel="stylesheet" href="materialize.min.css">
 </head>
 <body>
@@ -18,7 +19,7 @@
     <div>
        <div class="center" id="loader"><img src="images/icons/loader.gif" alt="" ></div>
        <div class="center">
-           <h5>Sorry o, my Blog page is still under construction, please do well to revisit some other time. <br> THANK YOU.</h5>
+           <p style="font-size: 20px;">Sorry o, my Blog page is still under construction, please do well to revisit some other time. <br> THANK YOU.</p>
            <a href="index.html"><h5 class="teal waves-light btn">GO BACK HOME</h5></a>
        </div>
     </div>
