--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <p class="connect">
-        <i class="material-icons">account_circle</i>
+        <i class="material-icons"></i>
     </p>
     <div id="loader-wrapper" class="btn grey">
         <div class=" loader-gif" id="loader">
