--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             friendly sites with amazing designs targeted to suit a vast variety of individuals.
         </p>
     </div>
+    
+    <div><a href="Fullstack React.pdf" download>Download pdf</a></div>
+    
     <h5 class="grey-text center-align" id="recent-projects">Recent projects . ..</h5>
     <div class="row container">
         <div class="col s12 m6 l6">
