--- a/blog.html
+++ b/blog.html
@@ -6,18 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="temp-style.css">
     <link rel="stylesheet" href="materialize.min.css">
 </head>
 <body>
     <div>
-        <p class="orange lighten-2" id="blog-bdrop"></p>
+        <p class="btn gradient-45deg-indigo-purple" id="blog-bdrop"></p>
         <h3 class="container card-panel center" id="blog-text-blog">BLOG
             <P><a href="index.html">HOME /</a> BLOG</P>
         </h3>
     </div>
     <div>
-       <div class="center" id="loader"><img src="images/icons/loader.gif" alt="" ></div>
+       <div class="center" id=""><img src="images/icons/loader.gif" alt="" ></div>
        <div class="center">
            <p style="font-size: 20px;">Sorry o, my Blog page is still under construction, please do well to revisit some other time. <br> THANK YOU.</p>
            <a href="index.html"><h5 class="teal waves-light btn">GO BACK HOME</h5></a>
