--- a/post.html
+++ b/post.html
@@ -9,9 +9,20 @@
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="temp-style.css">
     <link rel="stylesheet" href="materialize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik|ZCOOL+KuaiLe" rel="stylesheet">
 </head>
 <body>
+
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2';
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+
     <div>
         <div class=" gradient-45deg-indigo-purple" id="blog-bdrop">
             <div class="row head-container">
@@ -81,7 +92,13 @@
             
         </div>
         <div class="col s12 m4 l4"></div>
+        <div class="fb-share-button" data-href="https://chiagozielam.github.io/post" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fchiagozielam.github.io%2Fpost&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+
     </div>
+
+
+
+
 
     <footer>
         <div class="container">All Rights Reserved. <br> &copy Daniel Don, 2019.</div>
