--- a/post.html
+++ b/post.html
@@ -92,8 +92,7 @@
             
         </div>
         <div class="col s12 m4 l4"></div>
-        <div class="fb-share-button" data-href="https://chiagozielam.github.io/post" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fchiagozielam.github.io%2Fpost&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
-
+        <div class="fb-share-button" data-href="https://chiagozielam.github.io/post" data-layout="button" data-size="large" data-mobile-iframe="false"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fchiagozielam.github.io%2Fpost&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>        
     </div>
 
 
