--- a/post.html
+++ b/post.html
@@ -10,16 +10,21 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="ORGANISED LEARNING " />
-    <meta property="og:description" content="Mastering a new programming language" />
     <meta
-      property="og:image"
-      content="images/thought.jpg"
+      property="og:description"
+      content="Mastering a new programming language"
     />
+    <meta property="og:image" content="images/thought.jpg" />
     <title>Daniel - Blog</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="style2.css" />
     <link rel="stylesheet" href="temp-style.css" />
     <link rel="stylesheet" href="materialize.min.css" />
+    <link
+      rel="shortcut icon"
+      href="https://favicon-generator.org/favicon-generator/htdocs/favicons/2015-01-20/6735546b1fe276dbdab117426b2c55fb.ico"
+      type="image/x-icon"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Rubik|ZCOOL+KuaiLe"
       rel="stylesheet"
